<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".LoginPage">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="174.5dp"
        android:layout_height="250dp"
        android:layout_marginTop="45dp"
        app:cardBackgroundColor="#070707"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/cardView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/web" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/baloo_paaji"
            android:gravity="center"
            android:text="@string/web_development"
            android:textColor="#00FFE6" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="174.5dp"
        android:layout_height="250dp"
        android:layout_marginTop="45dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:layout_marginBottom="35dp"
            android:background="#0C0C0C"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/androidlogo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="220dp"
            android:background="#000000"
            android:fontFamily="@font/baloo_paaji"
            android:gravity="center"
            android:text="@string/android_development"
            android:textColor="#00FFE6" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="174.5dp"
        android:layout_height="250dp"
        android:layout_marginTop="28dp"
        android:background="#121111"
        android:backgroundTint="#0C0C0C"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/cardView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:layout_marginBottom="35dp"
            android:background="#131313"
            app:srcCompat="@drawable/aipreview"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="222dp"
            android:background="#0C0C0C"
            android:fontFamily="@font/baloo_paaji"
            android:gravity="center"
            android:text="@string/artificial_intilligence"
            android:textColor="#00FFE6" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="174.5dp"
        android:layout_height="250dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView6" >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="221dp"
            android:layout_marginBottom="35dp"
            android:background="#000000"
            app:srcCompat="@drawable/ml"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginTop="220dp"
            android:background="#000000"
            android:fontFamily="@font/baloo_paaji"
            android:gravity="center"
            android:text="@string/machine_learning"
            android:textColor="#00FFE6" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="219dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/aladin"
        android:text="@string/hello_buddy"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="348dp"
        android:layout_height="38dp"
        android:fontFamily="@font/aladin"
        android:text="@string/here_you_have_some_choice"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>